# CoHLA

./: README.md
RoomThermostat/: House.cohla
RoomThermostat/models/: StandaloneThermostat.poosl
libs/: CMakeLists.txt  README.md  install-ubuntu-18-04.sh  install-ubuntu-18_04.sh
libs/collision/: 3.3.shader-lighting.fs  3.3.shader-lighting.vs  3.3.shader.vs  Camera.h  CubeMesh.cpp  CubeMesh.h  Mesh.cpp  Mesh.h  RenderBody.cpp  RenderBody.h  RigidBody.cpp  RigidBody.h  STLMesh.cpp  STLMesh.h  Transformation.cpp  Transformation.h  Vector.cpp  Vector.h  Viewpoint.cpp  Viewpoint.h  World.cpp  World.h  col_sim.cpp  col_sim.h  collision_body.cpp  collision_body.h  loadMeshFromSTL.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  shader.h  test.cpp  transform.cpp  transform.h
libs/collision/include/glad/: glad.c  glad.h
libs/csv_export/: CsvExport.cpp  CsvExport.h
libs/fmu/: fmuWrapper.cpp  fmuWrapper.h
libs/metric/: EndValueMetric.cpp  EndValueMetric.h  ErrorMetric.cpp  ErrorMetric.h  Metric.cpp  Metric.h  MetricBase.cpp  MetricBase.h  MetricProcessor.cpp  MetricProcessor.h  MinMaxMetric.cpp  MinMaxMetric.h  TimerMetric.cpp  TimerMetric.h
libs/poosl/: PooslAttributeMessage.cpp  PooslAttributeMessage.h  PooslInteractionMessage.cpp  PooslInteractionMessage.h  PooslMessage.cpp  PooslMessage.h  PooslSimulator.cpp  PooslSimulator.h  PooslTimeMessage.cpp  PooslTimeMessage.h  pooslmodel.cxx  pooslmodel.hxx  pooslstatements.cxx  pooslstatements.hxx  poosltypes.cxx  poosltypes.hxx  rotalumisapitypes.cxx  rotalumisapitypes.hxx  rotalumisrequest.cxx  rotalumisrequest.hxx  rotalumisresponse.cxx  rotalumisresponse.hxx  rotsim.cpp  rotsim.h  total.cxx  total.hxx
libs/rti/: federate.cpp  federate.h  federateAmbassador.cpp  federateAmbassador.h
libs/rti/include/faults/: AbsoluteFault.cpp  AbsoluteFault.h  ConnectionFault.cpp  ConnectionFault.h  Fault.cpp  Fault.h  OffsetFault.cpp  OffsetFault.h  TimedFault.cpp  TimedFault.h  VarianceFault.cpp  VarianceFault.h
libs/rti/include/models/: Connection.cpp  Connection.h  FederateAttributeReference.cpp  FederateAttributeReference.h  FederateInfo.cpp  FederateInfo.h  PublishedAttribute.cpp  PublishedAttribute.h  SubscribedAttribute.cpp  SubscribedAttribute.h  TimeRange.cpp  TimeRange.h  Topology.cpp  Topology.h
libs/rti/include/scenario/: AssignEvent.cpp  AssignEvent.h  Event.cpp  Event.h  Scenario.cpp  Scenario.h  SocketEvent.cpp  SocketEvent.h
libs/socket/: socket.cpp  socket.h  test.cpp
libs/utils/: Utils.h
sources/nl/ru/sws/cohla/: CoHLA.xtext  ResourceUtils.xtend
sources/nl/ru/sws/cohla/generator/: CoHLAGenerator.xtend  FOMGenerator.xtend  HLAUtils.xtend
sources/nl/ru/sws/cohla/generator/openrti/: CoHLAGenerator.xtend  RunScriptGenerator.xtend  Utils.xtend
sources/nl/ru/sws/cohla/generator/openrti/config/: DSEGenerator.xtend  DistributionGenerator.xtend  FaultScenarioGenerator.xtend  MetricGenerator.xtend  ScenarioGenerator.xtend  SituationGenerator.xtend  TopologyGenerator.xtend
sources/nl/ru/sws/cohla/generator/openrti/metric/: MetricFederateGenerator.xtend  MetricFederateHeaderGenerator.xtend  MetricFederateMainGenerator.xtend
sources/nl/ru/sws/cohla/generator/openrti/models/: ClassArgument.java
sources/nl/ru/sws/cohla/generator/openrti/wrapper/: CMakeGenerator.xtend  FederateGenerator.xtend  FederateHeaderGenerator.xtend  MainGenerator.xtend  SimulatorGenerator.xtend  SimulatorHeaderGenerator.xtend
sources/nl/ru/sws/cohla/scoping/: CoHLAScopeProvider.xtend
sources/nl/ru/sws/cohla/validation/: CoHLAValidator.xtend
